@@ -1,5 +1,8 @@
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
+	* background-properties-capplet.c (get_legacy_settings): Fix
+	val_ulong in the gradient case
+
 	* RELEASE : 1.5.2
 
 2001-07-26  Bradford Hovinen  <hovinen@ximian.com>
